# NTUT-iSchoolPlus-MCP

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
nportal/: __init__.py  calendar.py  constants.py  course.py  graduation.py  scraper.py  session.py
server/: __init__.py
server/tools/: __init__.py  _helpers.py  auth.py  bulletin.py  calendar.py  files.py  graduation.py  homework.py  info.py  notes.py  semester.py  syllabus.py  timetable.py  videos.py
test/: 00_get_school_calendar.md
