[project]
name = "ntut-ischoolplus-mcp"
version = "0.1.0"
description = "MCP server for NTUT iSchool+ — query course information, timetables, syllabi, files, and bulletins"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx",
    "beautifulsoup4",
    "urllib3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["server", "nportal"]

[project.scripts]
ntut-ischoolplus-mcp = "main:main"
